# RocketBay

./: .gitignore  LICENSE  README.md  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
assets/css/: main.css
components/: AppHeader.vue  ConfigModal.vue  ConfigPanel.vue  GroupModal.vue  GroupsSidebar.vue  LaunchItemDetail.vue  LaunchItemModal.vue  LaunchItemsGrid.vue  LaunchItemsSidebar.vue  LoadingOverlay.vue
pages/: index.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  main.rs  models.rs  storage.rs
stores/: config.js  config.ts  groups.js  groups.ts  launchItems.js  launchItems.ts  settings.js  settings.ts  ui.js  ui.ts
types/: index.ts
